Update deploy link

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coc-dashboard",
   "private": true,
-  "homepage": "https://ethanmccleary2256-create.github.io/coc-dashboard-pub",
+  "homepage": "https://ethanmccleary2256-create.github.io/COC-Dashboard-Pub/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
